[gd_scene load_steps=13 format=3 uid="uid://k708pjaubi8r"]

[ext_resource type="Script" path="res://AttackUI/attack_ui.gd" id="1_jjdch"]
[ext_resource type="Script" path="res://AttackUI/MainUI.gd" id="1_viihh"]
[ext_resource type="PackedScene" uid="uid://cyqra6bmhk6d" path="res://pathTree/path_tree.tscn" id="2_05u1x"]
[ext_resource type="Script" path="res://AttackUI/reward_ui.gd" id="2_eci80"]

[sub_resource type="Animation" id="Animation_08rsw"]
resource_name = "attackselectReset"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SelectEnemyUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-835, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SelectEnemyUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackUI:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 706)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackUI:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ekgwd"]
resource_name = "reward_slidein"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RewardUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(170, 676), Vector2(172, 78)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RewardUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5own8"]
resource_name = "reward_slideout"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RewardUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(172, 78), Vector2(170, 676)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RewardUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dt72r"]
resource_name = "select_slideIn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SelectEnemyUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-835, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SelectEnemyUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qjhba"]
resource_name = "select_slideOut"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SelectEnemyUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-835, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SelectEnemyUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nqejt"]
resource_name = "slide_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(24, 706), Vector2(11, 439)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rl5o1"]
resource_name = "slide_out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(21, 443), Vector2(6, 657)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackUI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eosxs"]
_data = {
"attackselectReset": SubResource("Animation_08rsw"),
"reward_slidein": SubResource("Animation_ekgwd"),
"reward_slideout": SubResource("Animation_5own8"),
"select_slideIn": SubResource("Animation_dt72r"),
"select_slideOut": SubResource("Animation_qjhba"),
"slide_in": SubResource("Animation_nqejt"),
"slide_out": SubResource("Animation_rl5o1")
}

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("attackUI", "animPlayer")]
follow_viewport_enabled = true
script = ExtResource("1_viihh")
attackUI = NodePath("AttackUI")
animPlayer = NodePath("AnimationPlayer")
path_tree_scene = ExtResource("2_05u1x")

[node name="fake_path_tree_slot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="RewardUI" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 170.0
offset_top = 676.0
offset_right = 978.0
offset_bottom = 1102.0
script = ExtResource("2_eci80")

[node name="PanelContainer" type="PanelContainer" parent="RewardUI"]
layout_mode = 0
offset_right = 860.0
offset_bottom = 396.0

[node name="HBoxContainer" type="HBoxContainer" parent="RewardUI/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="upgrade_party" type="Button" parent="RewardUI/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade party"

[node name="add_to_party" type="Button" parent="RewardUI/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add unit to party"

[node name="unitsprite" type="AnimatedSprite2D" parent="RewardUI/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
position = Vector2(421, 187)

[node name="TurnLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_top = 6.0
offset_right = 74.0
offset_bottom = 46.0
grow_horizontal = 2

[node name="yourTurnLabel" type="Label" parent="TurnLabels"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "YOUR TURN"

[node name="enemyTurnLabel" type="Label" parent="TurnLabels"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "ENEMY TURN"

[node name="map" type="Button" parent="TurnLabels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 5.135
anchor_right = 5.719
anchor_bottom = 1.0
offset_left = 0.039978
offset_top = 3.0
offset_right = -0.0240479
offset_bottom = -17.0
text = "Map"

[node name="SelectEnemyUI" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchor_top = 0.855
anchor_right = 0.108
anchor_bottom = 0.995
offset_left = -835.0
offset_top = -550.04
offset_right = -835.416
offset_bottom = -549.76

[node name="backButton" type="Button" parent="SelectEnemyUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -56.0
offset_right = 90.0
offset_bottom = -14.0
grow_vertical = 0
text = "BACK"

[node name="AttackUI" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchor_top = 0.684
anchor_right = 1.0
anchor_bottom = 0.989
offset_left = 24.0
offset_top = 262.768
offset_right = -5.0
offset_bottom = 263.128
script = ExtResource("1_jjdch")

[node name="MainContainer" type="PanelContainer" parent="AttackUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.035
anchor_right = 0.99
anchor_bottom = 0.97
offset_left = -5.0
offset_top = -0.0700002
offset_right = -13.77
offset_bottom = 1.93999

[node name="HBoxContainer" type="HBoxContainer" parent="AttackUI/MainContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 30

[node name="AttackContainer" type="VBoxContainer" parent="AttackUI/MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="AttackContainer2" type="VBoxContainer" parent="AttackUI/MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="AttackContainer3" type="VBoxContainer" parent="AttackUI/MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="AttackContainer4" type="VBoxContainer" parent="AttackUI/MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="MovementContainer" type="VBoxContainer" parent="AttackUI/MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="pass" type="Button" parent="AttackUI/MainContainer/HBoxContainer/MovementContainer"]
layout_mode = 2
text = "Pass"

[node name="ScrollBar" type="ScrollContainer" parent="AttackUI/MainContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 40)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="ItemsContainer" type="HBoxContainer" parent="AttackUI/MainContainer/HBoxContainer/ScrollBar"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainControllPanel" type="VBoxContainer" parent="AttackUI/MainContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="attacks" type="Button" parent="AttackUI/MainContainer/MainControllPanel"]
layout_mode = 2
text = "Attacks"

[node name="items" type="Button" parent="AttackUI/MainContainer/MainControllPanel"]
layout_mode = 2
text = "Items"

[node name="mainPanelback" type="Button" parent="AttackUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = -1.515
anchor_right = 0.097
anchor_bottom = -1.243
offset_left = 5.0
offset_top = 248.97
offset_right = -58.931
offset_bottom = 229.114
text = "BACK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eosxs")
}

[node name="mapBackButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
offset_left = 1047.0
offset_top = 10.0
offset_right = 1104.0
offset_bottom = 41.0
text = "Back"

[connection signal="pressed" from="RewardUI/PanelContainer/HBoxContainer/upgrade_party" to="." method="_on_upgrade_party_pressed"]
[connection signal="pressed" from="RewardUI/PanelContainer/HBoxContainer/add_to_party" to="." method="_on_add_to_party_pressed"]
[connection signal="pressed" from="TurnLabels/map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="SelectEnemyUI/backButton" to="." method="_on_back_button_pressed"]
[connection signal="AttackDecided" from="AttackUI" to="." method="_on_attack_ui_attack_decided"]
[connection signal="ItemSelected" from="AttackUI" to="." method="_on_attack_ui_item_selected"]
[connection signal="TurnPassed" from="AttackUI" to="." method="_on_attack_ui_turn_passed"]
[connection signal="pressed" from="AttackUI/MainContainer/HBoxContainer/MovementContainer/pass" to="AttackUI" method="_on_pass_pressed"]
[connection signal="pressed" from="AttackUI/MainContainer/MainControllPanel/attacks" to="AttackUI" method="_on_attacks_pressed"]
[connection signal="pressed" from="AttackUI/MainContainer/MainControllPanel/items" to="AttackUI" method="_on_items_pressed"]
[connection signal="pressed" from="AttackUI/mainPanelback" to="AttackUI" method="_on_main_panelback_pressed"]
[connection signal="pressed" from="mapBackButton" to="." method="_on_map_back_button_pressed"]
